HIL/src/objects/Income_Source__c.object
<CustomObject>
    <description>Custom object to track income sources.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COLA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Prospect__c</fullName>
        <label>Client/Prospect</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Income Sources</relationshipLabel>
        <relationshipName>Income_Sources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Relationship_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Relationship Group</label>
        <referenceTo>Relationship_Group__c</referenceTo>
        <relationshipLabel>Income Sources</relationshipLabel>
        <relationshipName>Income_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Income Source</label>
    <nameField>
        <label>Income Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Income Sources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>